<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上营销助理</string>
    <string name="basic_info_title">公司简介</string>
    <string name="marketing_title">营销活动</string>
    <string name="main_product_title">产品介绍</string>
    <string name="contacts_title">企业通讯录</string>
    <string name="action_settings">Settings</string>
    <string name="clickAgain">再按一次返回键退出程序</string>
    <string name="user_center">用户中心</string>
    <string name="loading">加载中 &#8230;</string>
    <string name="loadingError">加载失败，点击重试</string>
    <string name="netUnavailable">网络不给力</string>
    <string name="allLoaded">全部加载完毕</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新 &#8230;</string>
    <string name="pull_to_refresh_tap_label">点击刷新 &#8230;</string>
    <string name="lastUpdate">上次更新：</string>
    <string name="configure">设置</string>
    <string name="collections">收藏</string>
    <string name="notConnected">网络不给力</string>
    <string name="contentLoading">内容导入中 &#8230;</string>
    <string name="loadFailed">加载失败，请重试！</string>
    <string name="barcoderScan">扫描下载客户端！</string>
    <string name="clearCacheTitle">清除缓存</string>
    <string name="clearCacheSum">保留缓存可节省流量</string>
    <string name="comfirmToClearCache">确定要清除缓存吗？</string>
    <string name="cancle">取消</string>
    <string name="OK">确定</string>
    <string name="networkConnected">网络已连接</string>
    <string name="system_config">系统设置</string>
    <string name="about">关于</string>
    <string name="version_info_title">版本信息</string>
    <string name="version_info_sum">Version &#160;</string>
    <string name="detect_verison_failed">版本检测失败</string>
    <string name="feedback">意见反馈</string>
    <string name="sendMail">请选择 &#8230;</string>
    <string name="sendError">发送失败！</string>
    <string name="other">其他</string>
    <string name="addCollectionSuccess">收藏成功</string>
    <string name="addCollectionFail">收藏失败，请重试！</string>
    <string name="delete">删除</string>
    <string name="deleteAll">清空收藏</string>
    <string name="options">选项</string>
    <string name="operatSucceed">操作成功</string>
    <string name="operatFailed">操作失败</string>
    <string name="search">搜索</string>
    <string name="invalid">请输入有效搜索关键字！</string>
    <string name="cancelCollecitonSucced">已取消收藏</string>
    <string name="cancelCollecitonFailed">取消失败，请重试！</string>
    <string name="searchNoResults">对不起，没有搜索到相关内容！</string>
    <string name="viewCollection">查看</string>
    <string name="inputKeyWords">请输入关键字</string>

</resources>
